[gd_scene load_steps=16 format=2]

[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/pogoda.gd" type="Script" id=2]
[ext_resource path="res://1616531838_26-p-voennii-fon-dlya-prezentatsii-30.jpg" type="Texture" id=3]
[ext_resource path="res://pixil-frame-0 (34).png" type="Texture" id=4]
[ext_resource path="res://PermanentMarker-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scence/Customise.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=18]
default_font = SubResource( 17 )
Label/fonts/font = SubResource( 17 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 120
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 120
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 80
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=12]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 150
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 49
outline_size = 1
font_data = ExtResource( 1 )

[node name="interfeise" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 482.155
margin_top = 356.689
margin_right = 482.155
margin_bottom = 356.689
rect_pivot_offset = Vector2( 1271.09, 24.4565 )
theme = SubResource( 18 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -174.289 ],
"_edit_vertical_guides_": [ -350.813 ]
}

[node name="Pixil-frame-0(34)" type="Sprite" parent="."]
position = Vector2( 621.845, 154.311 )
scale = Vector2( 0.626984, 0.626984 )
texture = ExtResource( 4 )

[node name="Customise" type="Node2D" parent="."]
position = Vector2( -291.155, 287.311 )
script = ExtResource( 7 )

[node name="Left" type="Button" parent="Customise"]
margin_left = -113.0
margin_top = -141.0
margin_right = -56.0
margin_bottom = -90.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "<<<-"
flat = true

[node name="Right" type="Button" parent="Customise"]
margin_left = 15.0
margin_top = -147.0
margin_right = 91.0
margin_bottom = -87.0
custom_fonts/font = SubResource( 16 )
text = "->>>"

[node name="Left b" type="Button" parent="Customise"]
margin_left = -122.0
margin_top = 63.0
margin_right = -65.0
margin_bottom = 114.0
text = "<<<-"

[node name="Right b" type="Button" parent="Customise"]
margin_left = 29.0
margin_top = 58.0
margin_right = 105.0
margin_bottom = 118.0
text = "->>>"

[node name="castom" type="Node2D" parent="Customise"]
position = Vector2( 0, 2.99997 )

[node name="Tank" type="Sprite" parent="Customise/castom"]

[node name="barrel" type="Sprite" parent="Customise/castom"]

[node name="start" type="Button" parent="."]
margin_left = 235.845
margin_top = -203.689
margin_right = 535.845
margin_bottom = -24.689
rect_pivot_offset = Vector2( 238.658, 360.643 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0.972549, 0.952941, 0.952941, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.309804, 0.298039, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "play"
flat = true
clip_text = true

[node name="exet" type="Button" parent="."]
margin_left = 261.845
margin_top = 129.311
margin_right = 509.845
margin_bottom = 308.311
rect_pivot_offset = Vector2( 264.438, -184.689 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.309804, 0.298039, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "exit"
flat = true

[node name="options" type="Button" parent="."]
margin_left = 196.845
margin_top = -21.689
margin_right = 577.845
margin_bottom = 99.311
custom_colors/font_color_disabled = Color( 1, 0.992157, 0.992157, 1 )
custom_colors/font_color_focus = Color( 1, 0.996078, 0.996078, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.309804, 0.298039, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Settings"
flat = true
__meta__ = {
"_editor_description_": "start"
}

[node name="if" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 0.992157, 0.992157, 1 )
position = Vector2( 1510.84, -163.689 )
scale = Vector2( 1.10278, 1.10278 )
texture = ExtResource( 3 )
offset = Vector2( -872.698, 105.48 )

[node name="no" type="Button" parent="if"]
margin_left = -783.47
margin_top = 184.987
margin_right = -561.47
margin_bottom = 260.987
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.309804, 0.298039, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "нет"
flat = true

[node name="yes" type="Button" parent="if"]
margin_left = -1356.57
margin_top = 146.901
margin_right = -944.567
margin_bottom = 352.901
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.309804, 0.298039, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
shortcut_in_tooltip = false
keep_pressed_outside = true
text = "да"
flat = true

[node name="Label" type="Label" parent="if"]
margin_left = -1417.0
margin_top = -161.0
margin_right = 559.0
margin_bottom = 190.0
rect_scale = Vector2( 0.6, 0.6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Вы действительно хотити выйти из игры?"

[connection signal="pressed" from="Customise/Left" to="Customise" method="_on_Left_pressed"]
[connection signal="pressed" from="Customise/Right" to="Customise" method="_on_Right_pressed"]
[connection signal="pressed" from="Customise/Left b" to="Customise" method="_on_Left_b_pressed"]
[connection signal="pressed" from="Customise/Right b" to="Customise" method="_on_Right_b_pressed"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="exet" to="." method="_on_exet_pressed"]
[connection signal="pressed" from="if/no" to="." method="_on_no_pressed"]
[connection signal="pressed" from="if/yes" to="." method="_on_yes_pressed"]
